# ace

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.th.md  ROADMAP.md  ace.local.toml  ace.toml  backends.html  build-all.sh  build.rs  bump.sh  commands.html  configuration.html  index.html  install.ps1  install.sh  release.sh  schools.html  site.css  skills.md
notes/: dagger-vs-tempfile-research.md
prd/: 00-overview.md  01-configuration.md  02-initialization.md  02-setup.md  03-setup.md  03-skills-sync.md  04-learn.md  04-skills-sync.md  05-authentication.md  05-session-prompt.md  06-context-management.md  07-backend.md
prd/school/: 00-overview.md  01-school-toml.md  02-school-commands.md
present/: OUTLINE.md  README.md  build.sh  slides.typ  theme.typ
present/sections/: a-opening.typ  b-what-ace-does.typ  c-business-value.typ  d-philosophy.typ  e-schools-skills.typ  f-architecture-closing.typ
prompts/: system.md
scripts/: cross-build.md  cross-build.sh
spec/: architecture.md  authentication.md  backend-install.md  backend.md  configuration.md  hooks.md  index.md  local-mcp.md  mcp.md  prompt-templating.md  roles.md  session-prompt.md  setup.md  skills-sync.md  testing.md  upgrade.md
spec/backends/: claude.md  codex.md  droid.md  opencode.md
spec/decisions/: 001-no-crossterm.md  002-remote-only-mcp.md  003-no-shallow-clones.md  004-local-mcp-servers.md  004-resume-fallback.md  005-action-layout.md  006-index-toml-data-dir.md  007-config-resolution-redesign.md
spec/research/: backend-abstraction-audit.md  codex-backend-comprehensive.md  future-directions.md  headless-auth-credentials.md  headless-backend.md  headless-mcp.md  plugins-macros.md
spec/school/: overview.md  school-commands.md  school-toml.md
src/: ace.rs  events.rs  fsutil.rs  git.rs  glob.rs  main.rs  paths.rs  platform.rs  school.rs  status.rs  template.rs  ui.rs
src/ace/: io.rs  mod.rs
src/actions/: mod.rs
src/backend/: claude.rs  codex.rs  flaude.rs  mod.rs  registry.rs
src/cmd/: auth.rs  config.rs  diff.rs  explain.rs  fly.rs  fmt.rs  import.rs  learn.rs  main.rs  maverick.rs  mcp.rs  mod.rs  paths.rs  pull.rs  school.rs  setup.rs  skills.rs  upgrade.rs  yolo.rs
src/config/: ace_toml.rs  backend.rs  index_toml.rs  mod.rs  paths.rs  school.rs  school_paths.rs  school_toml.rs  service.rs  tree.rs  (+2 more)
tests/: codex_test.rs  config_test.rs  diff_test.rs  exec_test.rs  explain_test.rs  fmt_test.rs  import_test.rs  mcp_test.rs  network_test.rs  paths_test.rs  pull_test.rs  school_init_test.rs  school_update_test.rs  setup_test.rs  skills_test.rs  startup_test.rs  update_test.rs  upgrade_test.rs  yolo_test.rs
www/: README.md  backends.html  build.ts  commands.html  configuration.html  index.html  layout.html  package.json  publish.sh  schools.html
(+141 files in other folders)
