[package]
name = "ace"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
console = "0.16.2"
gif = { version = "0.14.1", default-features = false, features = ["std"] }
signal-hook = { version = "0.4.3", default-features = false }
indicatif = { version = "0.18.4", default-features = false, features = ["unicode-width"] }
inquire = { version = "0.9.3", default-features = false, features = ["console", "one-liners"] }
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
tempfile = "3.26.0"
thiserror = "2.0.18"
toml = "1.0.3"
ureq = { version = "3.2.0", default-features = false, features = [
  "json",
  "rustls"
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
